 * baseconv() fixes for malformed input, "-" ambiguity in base 63/64, and
   missing "-" sign for single-digit output.
 * Flag names now have similar restrictions to attribute names. [MG]
 * The @ns*emit commands and ns*emit() functions are no longer restricted;
   when used by mortals, they work exactly the same as the non-ns versions.
   Suggested by Michael Blackburn. [MG]

Functions
 * llocks() without any arguments returns a list of the standard locks.
 * unsetq(), to erase queue registers. [GM]
 * and[l]flags(), or[l]flags(), andlpowers() and orlpowers() now all return
   #-1 if an invalid flag/power is given. Suggested by AnneLions. [MG]
 * benchmark(), to benchmark softcode.
 * Added "flag" as a category to valid(), to check for valid names for
   @flag/add and @power/add. [MG]

Fixes:
 * Bug caused by silly assumptions in list2arr() regarding remove_markup
   fixed. Reported by Stoko@M*U*S*H. [GM]
 * Using some substitutions on the connect/motd/etc attributes introduced
   in p11 could cause a crash. Reported by Minion@M*U*S*H. [GM]
 * Substitions on the connect/motd/etc attributes now work as expected
   when a player is connected. Suggested by Minion@M*U*S*H. [GM]
 * English matching works better with possessive get
   (get box's 2nd thing). Reported by israphel.
 * Many more messages generated by the server have been 
   marked as translatable. By Stoko.
 * 'No such file' messages were logged by mistake when connect_file and
   similar options were set to a dbref/attr. Reported by Zalethon. [MG]
 * Some cygwin C library versions define the imaxdiv_t type but not the
   associated imaxdiv() function. Split them up into 2 configure checks.
   Reported by Rankard.

Version 1.8.3 patchlevel 11                     Jan 01, 2010

Major changes:
  * The WHO, DOING and SESSION commands are now normal game commands,
    and can be @hook'd, typed in lower-case, etc. (The WHO at the login
    screen is separate.) If you have a softcoded 'who' command, you will